@@ -1,4 +1,9 @@
-2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>
+2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* libmisc/chkname.c: Do not include <utmp.h> and <utmpx.h>. There
+	are no more needed.
+
+2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* libmisc/limits.c: Replace strtol() by getlong().
 	* libmisc/limits.c: Replace HAVE_UTMPX_H by USE_UTMPX.
